--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,11 +9,16 @@
         <action android:id="@+id/action_homeFragment_to_sleepQualityFragment"
                 app:destination="@id/sleepQualityFragment" app:enterAnim="@anim/anim_slide_in"
                 app:exitAnim="@anim/anim_slide_out"/>
+        <action android:id="@+id/action_homeFragment_to_detailFragment" app:destination="@id/detailFragment"/>
     </fragment>
     <fragment android:id="@+id/sleepQualityFragment" android:name="com.example.rcademo.fragment.SleepQualityFragment"
               android:label="layout_fragment_sleep_quality" tools:layout="@layout/layout_fragment_sleep_quality">
         <action android:id="@+id/action_sleepQualityFragment_to_homeFragment" app:destination="@id/homeFragment"
                 app:enterAnim="@anim/anim_slide_in" app:exitAnim="@anim/anim_slide_out"/>
         <argument android:name="sleepQualityKey" app:argType="long"/>
+    </fragment>
+    <fragment android:id="@+id/detailFragment" android:name="com.example.rcademo.fragment.DetailFragment"
+              android:label="DetailFragment">
+        <argument android:name="nightId" app:argType="long"/>
     </fragment>
 </navigation>
